--- a/style.css
+++ b/style.css
@@ -157,20 +157,26 @@ height: 100%;
 .above-footer{
     width: 100%;
     height: 200px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin-top: 50px;
     margin-left: 0;
     left: 0;
+    
 
 }
 .footer-containers{
     display: flex;
-   
-  
+    background-color: #f3f3f3;
+    
 }
+
 .together{
     display: flex;
     padding: 30px;
+
+}
+.together .titles{
+    margin-right: 30px;
 }
 
 .app-img{
@@ -178,3 +184,83 @@ height: 100%;
    
 }
 
+.footer{
+    width: 100%;
+    height: 160px;
+    background-color: #f3f3f3;
+    /* border: 2px solid red; */
+    padding: 20px;
+
+}
+
+.footer-elements{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 100px;
+}
+.row1 li{
+    list-style: none;
+    color: grey;
+
+}
+.row1 li:hover{
+    color: black;
+    cursor: pointer;
+}
+.row1 i{
+    color: black;
+}
+
+.copyright{
+    background-color: rgb(16, 90, 84);
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    color: white;
+    width: 100%;
+    height: 50px;
+    font-size: 15px;
+
+}
+
+.btnlast{
+    padding: 10px;
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 500;
+      border-radius: 10px;   
+       width: 150px;
+       height: 50px;
+       margin-left: 600px; 
+       margin-bottom: 50px;
+}
+
+.popup{
+    width: 400px;
+    background: grey;
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    text-align: center;
+    padding: 0 30px 30px;
+    color: white;
+    transform: translate(-50%, -50%) scale(0.1);
+    visibility: hidden;
+}
+
+.popup button{
+    width: 30px;
+    height: 30px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.open-popup{
+    top: 50%;
+    visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
+
+}
