--- a/style.css
+++ b/style.css
@@ -132,10 +132,11 @@ header{
 
 .product img{
 display: block;
-width: 50%;
+width: 90%;
 margin-left: auto;
 margin-right: auto;
 height: 100%;
+margin-top: 5%;
 }
 
 .product h3{
