--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
-header{
+header{ 
     width: 100%;
     height: 70px;
     display: flex;
     align-items: center;
-    background-color: #f3f3f3;
+    background-color: #f3f3f3; 
 
-}
+ }
 
 
 .logo{
@@ -103,6 +103,17 @@ header{
 .second-header a:hover{
     color: rgb(86, 159, 159);
 }
+.item-container{
+    display: flex;
+}
+
+.items_list h6{
+margin-left: 50px;
+font-weight: 700;
+
+}
+
+
 
 .ads{
     width: 80%;
